@@ -40,6 +40,8 @@ PHP                                                                        NEWS
     queries"). (Nikita)
   . Fixed bug #71145 (Multiple statements in init command triggers unbuffered
     query error). (Nikita)
+  . Fixed bug #76815 (PDOStatement cannot be GCed/closeCursor-ed when a
+    PROCEDURE resultset SIGNAL). (Nikita)
 
 - Phpdbg:
   . Fixed bug #76813 (Access violation near NULL on source operand). (cmb)
